src/blockchain/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
spec:
  ingressClassName: nginx
  rules:
    - host: tonne.info
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: my-nginx-svc
                port:
                  number: 80
